--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<body>
-		<h1>Country search engine</h1>
-		<button id="search">Search a country</button>
-		<input id="country-name" type="text" />
-		<h2>List of countries</h2>
-		<ul id="countries">
-			<li>No data</li>
-		</ul>
+		<div class="content">
+			<h1>Country search engine</h1>
+			<button id="search">Search a country</button>
+			<input id="country-name" type="text" />
+			<h2>List of countries</h2>
+			<ul id="countries">
+				<li>No data</li>
+			</ul>
+		</div>
 		<script src="js/script.js"></script>
 	</body>
 
