--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<body>
-		<div class="content">
+		<div class="content"></div>
 			<h1>Country search engine</h1>
 			<button id="search">Search a country</button>
 			<input id="country-name" type="text" />
@@ -16,7 +16,6 @@
 			<ul id="countries">
 				<li>No data</li>
 			</ul>
-		</div>
 		<script src="js/script.js"></script>
 	</body>
 
